set process.env.CI = ""

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,6 +24,8 @@ jobs:
     #   run: cp .env.prod.example .env
 
     - name: 🔨 Build Project 
+      env:
+        CI: ""
       run: |
         npm install
         npm run build
