--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,6 +29,8 @@ jobs:
       run: |
         npm install
         npm run build
+    - name: List output files
+      run: find build/ -print
     - name: install ssh keys
       # check this thread to understand why its needed:
       # https://stackoverflow.com/a/70447517
@@ -37,7 +39,7 @@ jobs:
         echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
         ssh-keyscan -H ${{ secrets.SSH_HOST }} > ~/.ssh/known_hosts
     - name: connect and pull and build
-      run: ssh ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }} "cd ${{ secrets.WORK_DIR }}/CMS-ecommerce && git checkout ${{ secrets.MAIN_BRANCH }} && git pull"
+      run: ssh ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }} "cd ${{ secrets.WORK_DIR }}/CMS-ecommerce && git checkout ${{ secrets.MAIN_BRANCH }} && git pull && exit"
     - name: deploy
       run: cp -f ${{ secrets.WORK_DIR }}/CMS-ecommerce/build/. ${{ secrets.WORK_DIR }}
     - name: cleanup
